envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: internal-service }
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      with_request_body:
                        max_request_bytes: 4096
                        allow_partial_message: false
                      grpc_service:
                        google_grpc:
                          target_uri: pdp-opa:9191
                          stat_prefix: ext_authz
                        timeout: 2s
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: internal-service
      connect_timeout: 2s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: internal-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: internal-service #${SERVICE_NAME}
                  port_value: 8080 #${SERVICE_PORT}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
